--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     bottom: 0;
     left: 50%;
-    width: 4px;
+    width: 10px;
     background: #3498db;
     transform: translateX(-50%);
 }
@@ -33,7 +33,7 @@ body {
 }
 
 .event.left {
-    left: 0;
+    left: 0.9%;
     text-align: right;
 }
 
